--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "library-parser": "^1.1.0",
     "mongodb": "^4.13.0",
     "next": "10.0.6",
     "react": "17.0.1",
